# comcon2

./: .gitignore  CMakeLists.txt  build.sh  skel.txt
data/: skel.xml  skel_heavy.xml
data/bvh/: LocomotionFlat01_000.bvh  LocomotionFlat01_000_mirror.bvh  LocomotionFlat02_000.bvh  LocomotionFlat06_000_mirror.bvh  LocomotionFlat07_000.bvh  LocomotionFlat07_000_mirror.bvh  LocomotionFlat08_000.bvh  LocomotionFlat08_000_mirror.bvh  Motion_AI_01_01-001.bvh  Motion_AI_01_01-002.bvh  action.bvh  action_me.bvh  ball_handling.bvh  ball_trapping.bvh  base.bvh  chicken.bvh  chicken_heavy.bvh  door.bvh  loco.bvh  manipulation_ball.bvh  open_door.bvh  open_door3.bvh  open_door_long.bvh  run.bvh  run_long.bvh  shaking_hand.bvh  shaking_hand2.bvh  walk.bvh  walk_long.bvh  wash_window.bvh
data/bvh/mona_retarget/: Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_BtoF_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_FtoB_02.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_LtoR_02.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_KnockDown_RtoL_04.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_BtoF_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_FtoB_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_LtoR_04.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Knockback_RtoL_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Slide_BtoF_05.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Slide_FtoB_01.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Slide_LtoR_04.bvh  Anim_KraalA_A_Ax2H_A_Standard_Ext_Slide_RtoL_01.bvh
python/: CMakeLists.txt  Env.cpp  Env.h  config.py  discriminator.py  filter.py  mpi_utils.py  policy.py  run.sh  run_distributions.py  run_visulaize_force_recovery.py  torchutils.py  train.py  trainer.py
render/: CMakeLists.txt  Camera.cpp  Camera.h  Collision.cpp  Collision.h  DARTRendering.cpp  DARTRendering.h  DrawUtils.cpp  DrawUtils.h  GLUTWindow.cpp  GLUTWindow.h  GLUTWindow3D.cpp  GLUTWindow3D.h  OBJ.cpp  OBJ.h  Window.cpp  Window.h  lodepng.cpp  lodepng.h  main.cpp
sim/: CMakeLists.txt  Character.cpp  Character.h  DARTUtils.cpp  DARTUtils.h  Environment.cpp  Environment.h  MathUtils.cpp  MathUtils.h
sim/kinematics/: Character.cpp  Character.h  Motion.cpp  Motion.h  Skeleton.cpp  Skeleton.h  Utils.cpp  Utils.h  kinematics.h
